fix: word wrap for each todo task

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,7 @@ p {
 
 .each-todo {
   text-align: center;
+  word-wrap: break-word;
 }
 
 .task {
